<resources>
    <string name="app_name">Trip Reminder</string>
    <string name="timeLbl">Time:</string>
    <string name="typeLbl">Type:</string>
    <string name="fromLbl">From:</string>
    <string name="toLbl">To:</string>
    <string name="startBtn">Start</string>
    <string name="addBtn">+</string>
    <string name="trip_name">Trip Name</string>
    <string name="start_point">Select your start point</string>
    <string name="end_point">Select your end point</string>
    <string name="trip_details">Trip Details</string>
    <string name="add">Add Trip</string>
    <string name="update">Update Trip</string>
    <string name="cancel">Cancel</string>
    <string name="details_time">Time:</string>
    <string name="details_type">Type:</string>
    <string name="details_from">From:</string>
    <string name="details_to">To:</string>
    <string name="details_status">Status:</string>
    <string name="notes">Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="trip_type">
        <item>One Way Trip</item>
        <item>Round Trip</item>
    </string-array>

    <string-array name="trip_repetition">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat Weekly</item>
        <item>Repeat Monthly</item>
    </string-array>
    <string name="showDetails">Show Details</string>
    <string name="delete">Delete</string>
    <string name="login">Sign in</string>
    <string name="yesBtn">Yes</string>
    <string name="noBtn">No</string>
    <string name="date">Date:</string>
    <string name="repetition">Repetition:</string>
    <string name="re_date">Repetition Date:</string>
    <string name="re_time">Repetition Time:</string>
    <string name="tripTtile">Trip Reminder</string>
    <string name="slugin">Sign in to continue</string>
    <string name="forget">Forget password?</string>
    <string name="signup"> sign up</string>
    <string name="account">If you do not have an account</string>
    <string name="signup_title">Sign up to start your trip</string>
    <string name="btnSignup">Sign Up</string>
    <string name="haveAccount">Already have an account?</string>
    <string name="signIn">Sign In</string>
    <string name="createAccount">Create Account</string>
    <string name="signUp">Sign up</string>
    <string name="noTrip">You did not added any trip yet.</string>
    <string name="google">Sign up with Google</string>
</resources>