<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_Rdate"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/view_date"
        app:layout_constraintTop_toTopOf="@+id/view_date"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/txt_Rtime"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/txt_Rdate"
        app:layout_constraintTop_toTopOf="@+id/view_time"
        tools:text="000000000" />

    <TextView
        android:id="@+id/view_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/re_time"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/view_date"
        app:layout_constraintTop_toBottomOf="@+id/view_date" />

    <TextView
        android:id="@+id/view_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/re_date"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/repetition"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txt_repetition"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_type"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/details_time"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/details_type"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/txt_type"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/details_from"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/details_to"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/date"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txt_time"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_repetition"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        tools:text="000000000" />

    <TextView
        android:id="@+id/txt_from"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_to"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/txt_to"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_date"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="160dp"
        android:layout_height="30dp"
        android:fontFamily="@font/aclonica"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/txt_time"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        tools:text="0000000000" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/aclonica"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="0000000000" />

</androidx.constraintlayout.widget.ConstraintLayout>