<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A8883"
    tools:context=".Login">

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:hint="   Enter your email"
        android:inputType="textPersonName"
        android:textColorHint="#99A3A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slugin" />

    <EditText
        android:id="@+id/passTxt"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:hint="   Enter your password"
        android:inputType="textPersonName"
        android:textColorHint="#99A3A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/submit_btn"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#b3e9d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passTxt" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="182dp"
        android:layout_height="127dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_travel" />

    <TextView
        android:id="@+id/slugTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/tripTtile"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/slugin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/average"
        android:text="@string/slugin"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slugTxt"
        app:layout_constraintVertical_bias="0.363" />

    <TextView
        android:id="@+id/Forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/average"
        android:text="@string/forget"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <TextView
        android:id="@+id/accountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/average"
        android:text="@string/account"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Forget" />

    <TextView
        android:id="@+id/signupTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:fontFamily="@font/average"
        android:text="@string/signup"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toEndOf="@+id/accountTxt"
        app:layout_constraintTop_toBottomOf="@+id/Forget" />
</androidx.constraintlayout.widget.ConstraintLayout>