<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8A8883"
    tools:context=".RegisterUser">

    <EditText
        android:id="@+id/txtName"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:hint="   Full Name"
        android:inputType="textPersonName"
        android:textColorHint="#99A3A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupTitle" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:hint="   Email"
        android:inputType="textPersonName"
        android:textColorHint="#99A3A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_border"
        android:ems="10"
        android:hint="   Password"
        android:inputType="textPersonName"
        android:textColorHint="#99A3A4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/RegisterBtn"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/submit_btn"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/btnSignup"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#b3e9d3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="195dp"
        android:layout_height="147dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/titleTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_travel"
        tools:srcCompat="@drawable/ic_travel" />

    <TextView
        android:id="@+id/titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/architects_daughter"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/average"
        android:text="@string/signup_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:fontFamily="@font/average"
        android:text="@string/haveAccount"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/singInTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/average"
        android:text="@string/signIn"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtn"
        app:layout_constraintVertical_bias="0.226" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/average"
        android:text="@string/google"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/singInTxt"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="57dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_search" />
</androidx.constraintlayout.widget.ConstraintLayout>