<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        style="@style/TextAppearance.Compat.Notification.Info"
        android:layout_width="0dp"
        android:layout_height="203dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="#AEA7C1"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/cardview_border">

            <TextView
                android:id="@+id/timeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="12dp"
                android:text="11111"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/titleLbl" />

            <TextView
                android:id="@+id/typeLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="22222222222"
                app:layout_constraintStart_toStartOf="@+id/timeLbl"
                app:layout_constraintTop_toBottomOf="@+id/timeLbl" />

            <TextView
                android:id="@+id/toLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="4444444444"
                app:layout_constraintStart_toStartOf="@+id/fromLbl"
                app:layout_constraintTop_toBottomOf="@+id/fromLbl" />

            <TextView
                android:id="@+id/fromLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="3333333333"
                app:layout_constraintStart_toStartOf="@+id/typeLbl"
                app:layout_constraintTop_toBottomOf="@+id/typeLbl" />

            <TextView
                android:id="@+id/titleLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="TextView"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/timeLbl"
                app:layout_constraintStart_toStartOf="@+id/titleLbl"
                app:layout_constraintTop_toBottomOf="@+id/titleLbl" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/toLbl"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fromLbl"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/typeLbl"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/menuBtn"
                android:layout_width="35dp"
                android:layout_height="28dp"
                android:layout_marginEnd="16dp"
                android:background="@android:drawable/ic_menu_sort_by_size"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/titleLbl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/titleLbl"
                app:rippleColor="#000000" />

            <Button
                android:id="@+id/startBtn"
                android:layout_width="77dp"
                android:layout_height="28dp"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_border"
                android:freezesText="true"
                android:text="@string/startBtn"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="12sp"
                app:backgroundTint="@drawable/btn_border"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toLbl"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/notesBtn"
                android:layout_width="31dp"
                android:layout_height="29dp"
                android:layout_marginStart="100dp"
                android:background="@android:drawable/stat_notify_chat"
                app:backgroundTint="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="@+id/startBtn"
                app:layout_constraintStart_toEndOf="@+id/startBtn"
                app:layout_constraintTop_toTopOf="@+id/startBtn" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>